[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/MainMenu/SaveGameElement.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Titillium-Bold.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="SaveGameElement" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 26.0
custom_constants/separation = 20
script = ExtResource( 1 )

[node name="SaveNameLabel" type="RichTextLabel" parent="."]
margin_right = 933.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/bold_font = SubResource( 1 )
bbcode_enabled = true
fit_content_height = true

[node name="LoadButton" type="Button" parent="."]
margin_left = 953.0
margin_right = 1007.0
margin_bottom = 26.0
text = "Load"

[node name="ExportButton" type="Button" parent="."]
margin_left = 1027.0
margin_right = 1095.0
margin_bottom = 26.0
hint_tooltip = "Export the savefile. Useful for transfering your savefile from the web version into the standalone one or just to backup your save"
text = "Export"

[node name="DeleteButton" type="Button" parent="."]
margin_left = 1115.0
margin_right = 1280.0
margin_bottom = 26.0
text = "DELETE FOREVER"

[connection signal="pressed" from="LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
